--- a/app/src/main/res/layout/location_custom_cell.xml
+++ b/app/src/main/res/layout/location_custom_cell.xml
@@ -27,33 +27,49 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="50dp"
+                android:layout_marginRight="10dp"
                 android:background="@android:color/background_light"
                 android:orientation="horizontal">
+
 
 
                 <LinearLayout
                     android:id="@+id/firstLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="10dp"
                     android:gravity="center_vertical"
                     android:orientation="vertical">
 
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top|left"
+                        android:textSize="20dp"
+                        android:text="Name"
+                        android:textColor="@color/quantum_black_100" />
+                    <TextView
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
+
+
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="10dp"
                         android:text="TextView"
+                        android:textSize="15dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
 
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.302" />
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/visitedTv"
+                        android:text="nnn"
+                        android:textColor="@color/quantum_googred900"/>
 
                     <TextView
                         android:id="@+id/textView3"
@@ -62,6 +78,8 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="10dp"
+                        android:layout_gravity="bottom|right"
+                        android:textColor="@android:color/darker_gray"
                         android:text="TextView"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -69,47 +87,32 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.302" />
 
-                    <TextView
-                        android:id="@+id/lat"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="10dp"
-                        android:text="TextView"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.302"
-                        android:visibility="gone"/>
-                    <TextView
-                        android:id="@+id/longi"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="10dp"
-                        android:text="TextView"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.302"
-                        android:visibility="gone"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:orientation="horizontal">
+                    <ImageButton
+                        android:layout_width="190dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:id="@+id/directionBtn1"
+                        android:src="@drawable/ic_action_dir"
+                        android:backgroundTint="@color/white"/>
+                        <ImageButton
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="end"
+                            android:id="@+id/visitedBtn"
+                            android:src="@drawable/ic_action_check"
+                            android:backgroundTint="@color/white"/>
+                    </LinearLayout>
 
                 </LinearLayout>
 
 
             </LinearLayout>
 
-        <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:id="@+id/directionBtn"
-            android:src="@drawable/ic_action_direction1"
-            android:backgroundTint="@color/white"/>
+
     </androidx.cardview.widget.CardView>
 
 
