--- a/app/src/main/res/drawable/rouded_button.xml
+++ b/app/src/main/res/drawable/rouded_button.xml
@@ -8,7 +8,7 @@
         android:top="0.5dp"
         android:bottom="0.5dp">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/white"/>
+            <solid android:color="@color/colorPrimaryDark"/>
             <corners android:radius="25dp" />
         </shape>
     </item>
