--- a/app/src/main/res/layout/activity_custom_direction.xml
+++ b/app/src/main/res/layout/activity_custom_direction.xml
@@ -91,7 +91,7 @@
                 android:textSize="10sp"
                 android:id="@+id/restaurant"
                 android:text="@string/restaurant"
-                android:background="@drawable/rouded_button"
+                android:background="@drawable/ripple"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -172,7 +172,7 @@
             android:layout_gravity="bottom"
             android:backgroundTint="@color/quantum_bluegrey400"
             app:backgroundTint="@color/quantum_bluegrey400"
-            android:src="@drawable/ic_action_direction"
+            android:src="@drawable/ic_action_direction1"
             android:layout_marginTop="10dp"
             android:id="@+id/direction_btn"
             android:elevation="25dp"
@@ -181,6 +181,113 @@
 
         </com.google.android.material.floatingactionbutton.FloatingActionButton>
     </LinearLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_gravity="bottom"
+        android:id="@+id/customdistance"
+        android:elevation="15dp"
+        app:cardCornerRadius="15dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/white"
+        android:visibility="gone">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:orientation="horizontal"
+            >
+
+            <LinearLayout
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="110dp"
+                android:orientation="vertical"
+                >
+
+                <ImageView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/road">
+
+                </ImageView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_gravity="bottom|center"
+                    android:text="Distance"
+                    android:id="@+id/distance_tv">
+
+                </TextView>
+
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="60dp"
+
+                android:layout_gravity="right"
+                android:layout_height="match_parent"
+                android:layout_marginStart="40dp"
+                android:orientation="vertical"
+                >
+
+                <ImageView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/clock">
+
+                </ImageView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_gravity="bottom|center"
+                    android:text="Duration"
+                    android:id="@+id/durationTv">
+
+                </TextView>
+
+
+
+            </LinearLayout>
+
+
+
+
+
+        </LinearLayout>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom">
+
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/rouded_button"
+                android:text="Stop Navigtion"
+                android:textColor="@color/white"
+                android:id="@+id/stop_navigationBtn"
+                ></Button>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
+
+
+
+
+
+
+
+    </androidx.cardview.widget.CardView>
 
 
 </FrameLayout>
